better noimage.svg

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -45,6 +45,9 @@ img:before {
     background-size: cover;
     background-position: center;
 }
+img {
+    position: relative;
+}
 
 input {
     @apply min-w-0 max-w-full;
